Fix Installer when having JRE installed